syntax = "proto3";

message GetRequest {
	string id = 1;
}
